--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond $1 !^(images|photos|css|js|robots\.txt)
-RewriteRule ^(.*)$ /index.php?url=$1 [L]
+RewriteRule ^(.*)$ /php-mvc/index.php [L,QSA]
