--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /php-mvc/index.php [L,QSA]
+RewriteRule ^(.*)$ /mvc-php/index.php [L,QSA]
