--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
 RewriteEngine on
-RewriteBase /mvc-php/
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ /mvc-php/index.php [L,QSA]
+RewriteRule ^(.*)$ index.php [L,QSA]
